--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint /**/*.{js, jsx, ts, tsx}\"",
-    "prettier:fix": "prettier --write /**/*.{js, jsx, ts, tsx}",
-    "prettier:check": "prettier /**/*.{js, jsx, ts, tsx}",
+    "lint": "eslint '**/*.{js, jsx, ts, tsx}'",
+    "prettier:fix": "prettier --write '**/*.{js, jsx, ts, tsx}'",
+    "prettier:check": "prettier '**/*.{js, jsx, ts, tsx}'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
