--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint": "eslint /**/*.{js, jsx, ts, tsx}\"",
     "prettier:fix": "prettier --write /**/*.{js, jsx, ts, tsx}",
     "prettier:check": "prettier /**/*.{js, jsx, ts, tsx}",
-    "test": "jest",
-    "start": "nodemon index.js"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -20,8 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "jest": "^29.2.2",
-    "nodemon": "^2.0.20"
+    "jest": "^29.2.2"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
@@ -37,7 +35,6 @@
     "eslint-plugin-sonarjs": "^0.16.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
