--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "lint": "eslint /**/*.{js, jsx, ts, tsx}\"",
     "prettier:fix": "prettier . --write --ignore-path .gitignore",
-    "prettier:check": "prettier . --check --ignore-path .gitignore"
+    "prettier:check": "prettier . --check --ignore-path .gitignore",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -28,7 +29,8 @@
     "eslint-plugin-sonarjs": "^0.16.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "jest": "^29.2.2"
   },
   "lint-staged": {
     "**/*.js": "eslint",
