--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "jest": "^29.2.2"
+    "jest": "^29.2.2",
+    "typescript": "^4.8.4"
   },
   "lint-staged": {
     "**/*.js": "eslint",
