--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint /**/*.{js, jsx, ts, tsx}\"",
     "prettier:fix": "prettier . --write --ignore-path .gitignore",
     "prettier:check": "prettier . --check --ignore-path .gitignore",
